microk8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /solr/
        backend:
          serviceName: solr-1600460383-svc
          servicePort: 8983
